perl-ldap 0.32 --

Bug Fixes
  * Documentation updates
  * Fixed LDIF output from ldapsearch command
  * Return an error if no filter is passed to Net::LDAP::filter->parse
  * Fixed bug handling comments in LDIF parser
  * Fix to ldapsearch for passing scope with -s
  * Do not send a fake userid in SASL binds
  * Net::LDAP::Schema->parse() now returns undef on errors

Enhancements
  * Added supportedFeatures to the default list of attributes
    fetched by ->root_dse
  * Added option to sort attributes in LDIF output, with objectclass
    being first floowed by all other attributes in alphabetical order
  * Add escape/unescape filters/DN utility functions
  * Added support for reading LDIF URL attributes using file://
  * The socket created by new can now be bound to a local address & port
  * Any controls returned by the server with each entry as a result from a search
    are now available in the callback function
  * Added classes for EntryChange, PersistentSearch and ManageDsaIT controls
  * Allow options passed to Net::LDAP::Entry-.update to be passed to the
    Net::LDAP method that is finally called

perl-ldap 0.31  1 Jan 2004
==========================

* Fixed bug that could cause methods to return an integer instead of an object
* Fixed bug causing Schema.pm to ignore superior classes that had no attributes
* Documentation updates
* Updates to LDIF module

perl-ldap 0.30 17 Oct 2003
==========================

* Documentation updates
* Fixed bug checking return value of client_step in bind()
* Fixed bug in Entry.pm causing method calls on unblessed references

perl-ldap 0.29 24 Jun 2003
==========================

* Workaround bug in IO::Socket::SSL when startTLS fails
* Fix reference loop memory leak problem
* Add a SIGNATURE to the distribution
* Re-added support for :all in the import list to get all constants
* New methods error_name, error_text, error_desc added to Message.pm

perl-ldap 0.28 19 May 2003
==========================
