@@ -1,9 +1,0 @@
-my.cfg
-blib
-_dev
-Makefile
-blib
-pm_to_blib
-temp
-?
-SIGNATURE
